# python_labs

./: .coverage  README.md  pyproject.toml  test.txt  ирвр
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: input.txt  people.csv  people.json
python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: file1.json  file2.json  file3.xlsx
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab02/: 1.1_arrays.py  1.2_arrays.py  1.3_arrays.py  2.1_matrix.py  2.2_matrix.py  2.3_matrix.py  tuples.py
src/lab03/: 1.1_normalize.py  1.2_tokenize.py  1.3-4_count_freq.py
src/lab04/: exA.py  exB.py  io_txt_csv.py  text_processing.py
src/lab05/: csv_to_json.py  csv_to_xlsx.py  json_to_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  benchmarks.py  linked_list.py  structures.py
src/lib/: text.py
src/src/data/: people1.csv  people1.json
tests/: test_json_csv.py  test_text.py
